Fix layout issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,3 +4,30 @@ img.map-thumbnail {
     width: 160px;
     height: 120px;
 }
+
+body {
+    padding-top: 60px;
+}
+
+@media (max-width: 979px){
+    body {
+        padding-top: 0px;
+    }
+}
+
+footer {
+    color: #666;
+    background: #222;
+    padding: 17px 0 18px 0;
+    border-top: 1px solid #000;
+}
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -63px;
+}
+.push {
+    height: 63px;
+}
